[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "regression"
version = "0.0.1"
authors = [
{ name="Mauricio de Barros", email="mauricio.debarros@ucalgary.ca" },
]
description="Linear least squares regression implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/mcdebarros/GOPH420-W2023-LAB03"